2010-07-28 Homer Xing <homer.xing@gmail.com>

    * Fix bug about SweetHome3D installing path, issue 1020.
    * Fix bug about RemasterSys installing, issue 1023.
    * Fix bug about a lot of third party repositories, issue 1022.

2010-07-27 CHEN Yangyang <skabyy@gmail.com>

    * Optimize the repository configure pane
    * Add "add third party repository area" to repository configure pane
    * Fix some bugs

2010-07-27 HAN Haofu <gtxx3600@gmail.com>

	* Allow user to add new package-entry
	* Allow user to modify package-detail
	* Allow user to change package-icon
	* Allow user to add/remove package to/from Favourite

2010-07-27 Homer Xing <homer.xing@gmail.com>

    * Terminal window grabs focus.
    * Add KDevelop, an IDE similar to Visual Studio.
    * Add Kile, a LaTeX editor.
    * Add LyX, "what you see is what you mean" LaTeX editor.
    * Add Pdftk, a command line tool which can split, merge, encrypt and uncompress PDF files.
    * Add PDFedit, add marks and annotations on PDF files.
    * Add GoldenDict, one of the best dictionary applications.
    * Add Artha, looking up synonyms and antonyms.
    * Add MyTourbook, excellent route planner, and GPS log analyser software.
    * Do not store downloaded files in /var/cache/ailurus/ any more.
    * Add RouteConverter, converts between different GPS track formats.
    * Add Backintime, incremental backup tool supporting schedule.
    * Add Geogebra, learning algebra and geometry.
    * Add Celestia, 3D astronomy simulator.
    * Add Kstars, planetarium software.
    * Add Handbrake, video transformer.

2010-07-26 Homer Xing <homer.xing@gmail.com>

    * Use a proxy server if http_proxy environment variable is set

2010-07-25 Homer Xing <homer.xing@gmail.com>

    * Improve behaviour of agreement dialog.
      When the user select "I agree." and press "No", then still show dialog next time.
    * Add qcad-doc in qcad item
    * Do not repeatly display error messages on same file from get_information_pixbuf()